k8s-rewrite/charts/media-stack/ytdl/ingress.yaml
# ytdl Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ytdl-ingress
  namespace: plex
spec:
  rules:
  - host: ytdl.branconet.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ytdl
            port:
              number: 8081
